--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -22,3 +22,12 @@ body {
     font-weight: normal;
     color: #999999;
 }
+
+.profile .section{
+    margin-top: 15px;
+}
+
+.community-menu {
+    color: #999999;
+    font-size:13px;
+}
