--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -17,26 +17,61 @@
 
 <div class="container-fluid main profile">
     <div class="row">
+        <!--左边主要内容-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
-                <h4><span th:text="${question.title}"></span> </h4>
+            <!--正文-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4 question-title><span th:text="${question.title}"></span></h4>
                 <span class="text-desc">
                 作者: <span th:text="${question.user.name}"></span>
                 发布时间: <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
                 阅读数: <span th:text="${question.viewCount}"></span>
             </span>
-                <hr>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <a th:href="@{'/publish/'+${question.id}}" class="community-menu" th:if="${session.user != null && session.user.id == question.creator}">
+                <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                   th:if="${session.user != null && session.user.id == question.creator}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     编辑
                 </a>
             </div>
 
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!--回复-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h4><span th:text="${question.commentCount}"></span> 个回复</h4>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:each="comment : ${comments}"><!--comments-->
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded"
+                                 th:src="${comment.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                            <span th:text="${comment.user.name}"></span>
+                        </h5>
+                        <div th:text="${comment.content}"></div>
+                        <div class="menu">
+                            <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                            <span class="glyphicon glyphicon-comment icon"></span>
+                            <span class="pull-right" th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                        </div>
+                    </div>
+                </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            </div>
+            </div>
+
+
+            <!--回复输入框-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
-                <div class="media" >
+                <h4>输入回复</h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <br>
+                <div class="media">
                     <div class="media-left">
                         <a href="#">
                             <img class="media-object img-rounded"
@@ -53,11 +88,13 @@
                 <textarea class="form-control comment" rows="6" id="comment_content"></textarea>
                 <button type="button" class="btn btn-success btn-comment" onclick="post()">回复</button>
             </div>
-               <!--th:if="${session.user != null && session.user.id == question.creator}">-->
+            <!--th:if="${session.user != null && session.user.id == question.creator}">-->
         </div>
+
+        <!--右边信息块-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <h4>发起人</h4>
-            <div class="media" >
+            <div class="media">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-circle"
