相关问题的实现

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -31,6 +31,22 @@ body {
     margin-top: 15px;
 }
 
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 18px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.question-wechat {
+    width: 100%;
+}
+
 .community-menu {
     color: #999999;
     font-size: 13px;
@@ -61,6 +77,18 @@ body {
     border-bottom: 1px solid #999999;
 }
 
+.sub-comments {
+    border-radius: 5px;
+    margin-top: 10px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+
+.sub-comments .btn{
+    margin: 10px 0;
+}
+
 .comment-sp {
     margin-top: 5px;
 }
@@ -74,6 +102,19 @@ body {
     margin-right: 6px;
     font-size: 15px;
     cursor: pointer;
+}
+
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon :hover {
+    color: #499ef3;
+}
+
+.menu .active {
+    color: #499ef3;
 }
 
 .menu .icon:hover {
