--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -17,7 +17,7 @@
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span th:text="${sectionName}"></span> </h2>
+            <h2><span th:text="${sectionName}"></span></h2>
             <hr>
 
             <div class="media" th:each="question : ${pagination.questions}">
@@ -29,9 +29,15 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <!--<span th:text="${question.description}"></span><br>-->
-                    <span class="text-desc"><span th:text="${question.commentCount}"></span> 个回复 ·
-                        <span th:text="${question.viewCount}"></span> 次浏览 · <span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> </span>
+                    <span class="text-desc">
+                        <span th:text="${question.commentCount}"></span> 个回复 • <span
+                            th:text="${question.viewCount}"></span> 次浏览 • <span
+                            th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span> •
+                        <a th:href="@{'/publish/'+${question.id}}" class="community-menu"
+                           th:if="${session.user != null && session.user.id == question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
+                    </span>
                 </div>
             </div>
             <nav aria-label="Page navigation">
@@ -50,7 +56,7 @@
 
                     </li>
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}? active : ''">
-                        <a  th:href="@{/profile/question/(page=${page})}" th:text="${page}" ></a>
+                        <a th:href="@{/profile/question/(page=${page})}" th:text="${page}"></a>
 
                     </li>
 
@@ -73,10 +79,12 @@
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
-                <a href="/profile/question"  th:class="${section == 'questions'}? 'active list-group-item' : 'list-group-item'">
+                <a href="/profile/question"
+                   th:class="${section == 'questions'}? 'active list-group-item' : 'list-group-item'">
                     我的问题
                 </a>
-                <a href="/profile/replies"  th:class="${section == 'replies'}? 'active list-group-item' : 'list-group-item'">
+                <a href="/profile/replies"
+                   th:class="${section == 'replies'}? 'active list-group-item' : 'list-group-item'">
                     最新回复
                     <span th:class="badge">14</span>
                 </a>
