--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -39,7 +39,8 @@
                         </ul>
                     </li>
                     <li th:if="${session.user == null}">
-                        <a href="https://github.com/login/oauth/authorize?client_id=7f746da9e0679e7eda95&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登陆</a>
+                        <!--<a th:href="@{https://github.com/login/oauth/authorize(client_id='7f746da9e0679e7eda95',redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},scope='user',state=1)}">登录</a>-->
+                        <a th:href="@{https://github.com/login/oauth/authorize(client_id=${clientId},redirect_uri=${#httpServletRequest.getRequestURL()+'callback'},scope='user',state=1)}">登录</a>
                     </li>
                 </ul>
             </div>
