--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -94,13 +94,12 @@
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>问题发起指南</h3>
-            * 问题标题: 请用精简语言表述您发布的问题,不超过25字. <br>
-            * 问题补充: 详细补充您的问题内容,并确保问题描述清晰直观,并提供一些相关的资料. <br>
-            * 选择标签: 选择一个或者多个合适的标签,书写用逗号隔开,每个标签不超过10个字. <br>
+            <h3>问题发起指南</h3><br>
+            <h5><strong>问题标题: </strong>请用精简语言表述您发布的问题,不超过25字. </h5><br>
+            <h5><strong>问题补充: </strong>详细补充您的问题内容,并确保问题描述清晰直观,并提供一些相关的资料.</h5> <br>
+            <h5><strong>选择标签: </strong>选择一个或者多个合适的标签,书写用逗号隔开,每个标签不超过10个字. </h5><br>
         </div>
     </div>
 </div>
-
 </body>
 </html>
