--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>学习社区</title>
+    <title>博客分享社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="css/community.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/community.css">
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
 
@@ -25,8 +25,9 @@
 
 <div class="container-fluid main">
     <div class="row">
+        <!--左边块-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h2>
+            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h3>
             <hr>
 
             <div class="media" th:each="question : ${pagination.data}">
@@ -82,9 +83,16 @@
 
 
         </div>
+        <!--右边块-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <!--<h3>热门话题</h3>-->
+            <!--图片信息-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>本社区的GitHub地址</h4>
+                <img class="img-thumbnail question-wechat" src="/img/github-url.png">
+            </div>
         </div>
+
     </div>
 </div>
 
