--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -10,9 +10,9 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">学习社区</span>
+                    <span class="sr-only">博客分享社区</span>
                 </button>
-                <a class="navbar-brand" href="/">学习社区</a>
+                <a class="navbar-brand" href="/">博客分享社区</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
