--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,6 +19,7 @@
             <h2><span th:text="${sectionName}"></span></h2>
             <hr>
 
+            <!--我的问题页-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
                 <div class="media" th:each="question : ${pagination.data}">
                     <div class="media-left">
@@ -43,6 +44,7 @@
                     </div>
                 </div>
             </div>
+            <!--最新回复页-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}">
                 <div class="media" th:each="notification : ${pagination.data}">
                     <div class="media-body">
@@ -56,6 +58,7 @@
                     </div>
                 </div>
             </div>
+            <!--分页-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <nav aria-label="Page navigation">
                     <ul class="pagination">
@@ -89,6 +92,7 @@
                 </nav>
             </div>
         </div>
+        <!--右边-->
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="list-group section">
                 <a href="/profile/questions"
