--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -92,7 +92,7 @@
                                     <span th:text="${comment.commentCount}"></span>
                                 </span>
                                 <span class="pull-right"
-                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
+                                      th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>
                             </div>
                             <!--二级评论-->
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
@@ -121,7 +121,7 @@
                         <div class="media-left">
                             <a href="#">
                                 <img class="media-object img-rounded"
-                                     th:src="${session.user != null ? session.user.avatarUrl : '/images/default-avatar.png'}">
+                                     th:src="${session.user != null ? session.user.avatarUrl : '/img/default-avatar.png'}">
                             </a>
                         </div>
                         <div class="media-body">
@@ -157,12 +157,7 @@
                 </div>
             </div>
 
-            <!--图片信息-->
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>图片观看</h4>
-                <img class="img-thumbnail question-wechat" src="/img/preview.jpg">
-            </div>
+
 
             <!--相关问题-->
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
