--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -44,7 +44,7 @@ body {
 }
 
 .question-wechat {
-    width: 60%;
+    width: 200px;
 }
 
 .community-menu {
@@ -130,4 +130,9 @@ body {
 
 .menu .icon:hover {
     color: #499ef3;
+}
+
+.footer {
+    padding: 10px 25%;
+    color: #666;;
 }
