--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>博客分享社区</title>
+    <title>博客分享</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -27,7 +27,7 @@
     <div class="row">
         <!--左边块-->
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h3>
+            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 博客</h3>
             <hr>
 
             <div class="media" th:each="question : ${pagination.data}">
@@ -88,14 +88,14 @@
             <!--<h3>热门话题</h3>-->
             <!--图片信息-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>本社区的GitHub地址</h4>
-                <img class="img-thumbnail question-wechat" src="/img/github-url.png">
+                <h4>个人微信</h4>
+                <img class="img-thumbnail question-wechat" src="/img/wx.jpg">
             </div>
         </div>
 
     </div>
 </div>
-
+<div th:insert="~{footer :: foot}"></div>
 
 </body>
 </html>
